[package]
name = "ckb-testtool"
version = "0.4.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB contract testing tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.7"
lazy_static = "1.4"
linked_hash_set = "0.1"
ckb-chain-spec = "0.40.0"
ckb-types = "0.40.0"
ckb-error = "0.40.0"
ckb-script = "0.40.0"
ckb-hash = "0.40.0"
ckb-jsonrpc-types = "0.40.0"
ckb-crypto = "0.40.0"
ckb-resource = "0.40.0"
ckb-verification = "0.40.0"
ckb-traits = "0.40.0"
# Remove this after CKB fixed the dependencies issue
ckb-vm = "=0.19.3"
ckb-vm-definitions = "=0.19.3"
tentacle-multiaddr = "=0.2.0"
tentacle-secio = "=0.4.5"
molecule = "=0.6.0"

[dev-dependencies]
ckb-system-scripts = "0.5"
