[package]
name = "ckb-tool"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
ckb-verification = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
simple-jsonrpc-client = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
faster-hex = "0.4"
