[package]
name = "ckb-tool"
version = "0.2.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB crates all in one"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-chain-spec = "0.37.0-pre"
ckb-types = "0.37.0-pre"
ckb-error = "0.37.0-pre"
ckb-script = "0.37.0-pre"
ckb-hash = "0.37.0-pre"
ckb-jsonrpc-types = "0.37.0-pre"
ckb-crypto = "0.37.0-pre"
ckb-resource = "0.37.0-pre"
ckb-verification = "0.37.0-pre"
ckb-traits = "0.37.0-pre"
simple-jsonrpc-client = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
faster-hex = "0.4"
