[package]
name = "ckb-tool"
version = "0.3.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB crates all in one"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-chain-spec = "0.39.0"
ckb-types = "0.39.0"
ckb-error = "0.39.0"
ckb-script = "0.39.0"
ckb-hash = "0.39.0"
ckb-jsonrpc-types = "0.39.0"
ckb-crypto = "0.39.0"
ckb-resource = "0.39.0"
ckb-verification = "0.39.0"
ckb-traits = "0.39.0"
simple-jsonrpc-client = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
faster-hex = "0.4"
